# pipeline-migration-tool

./: .gitignore  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  requirements-test.txt  requirements.txt  tox.ini
.gemini/: config.yaml  styleguide.md
.github/workflows/: test.yaml
hack/: local-test.sh  make-release.sh
hack/integration-test/: setup.sh
hack/integration-test/app/.tekton/: ci-pipeline.yaml
hack/integration-test/definitions/pipelines/: kustomization.yaml
hack/integration-test/definitions/pipelines/core-services/: kustomization.yaml
hack/integration-test/definitions/pipelines/docker-build/: docker-build.yaml  kustomization.yaml
hack/integration-test/definitions/task/clone/0.2/: clone.yaml
hack/integration-test/definitions/task/lint/0.2/: lint.yaml
hack/local-test/: run.sh
hack/local-test/task/clone/: clone.yaml
hack/local-test/task/clone/migrations/: 0.2.1.sh  0.3.0.sh
hack/local-test/task/tests/: tests.yaml
hack/local-test/task/tests/migrations/: 0.2.0.sh  0.3.0.sh
hack/task/clone/: clone.yaml
hack/task/clone/migrations/: 0.2.1.sh  0.3.0.sh
hack/task/tests/: tests.yaml
hack/task/tests/migrations/: 0.2.0.sh  0.3.0.sh
src/pipeline_migration/: cache.py  cli.py  migrate.py  pipeline.py  quay.py  registry.py  types.py  utils.py  yamleditor.py
src/pipeline_migration/actions/: add_task.py  format.py  migrate.py
src/pipeline_migration/actions/migrate/: cli.py  constants.py  exceptions.py  main.py  models.py
src/pipeline_migration/actions/migrate/resolvers/: __init__.py  linked_migrations.py  migration_images.py  simple.py  transition_proxy.py
src/pipeline_migration/actions/modify/: __init__.py  generic.py  task.py
tests/: conftest.py  test_cache.py  test_cli.py  test_migrate.py  test_pipeline.py  test_quay.py  test_registry.py  test_utils.py  test_yamleditor.py  utils.py
tests/actions/: test_add_task.py  test_add_task_cli.py  test_format_cli.py  test_migrate.py  test_migrate_cli.py  test_migrate_run_migrations.py
tests/actions/modify/: test_generic.py  test_generic_cli.py  test_task.py  test_task_cli.py
